--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "chat-ui",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jordandgold.github.io/chat-ui/",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
   },
@@ -16,6 +18,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
